[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiraoku.shinichi", email = "s.hiraoku@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "types-ujson>=5.10.0.20240515",
    "ruff>=0.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]

[tool.mypy]
plugins = []
ignore_missing_imports = true
strict= true

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W"]
lint.ignore = ["E501"]
